<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/falcon"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="460dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/header_question1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_question1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radio_question1_answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/question1_radio1" />

                    <RadioButton
                        android:id="@+id/radio_question1_answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/question1_radio2" />

                    <RadioButton
                        android:id="@+id/radio_question1_answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/question1_radio3" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/header_question2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_question2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radio_question2_answer1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/question2_radio1" />

                    <RadioButton
                        android:id="@+id/radio_question2_answer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/question2_radio2" />

                    <RadioButton
                        android:id="@+id/radio_question2_answer3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/question2_radio3" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/header_question3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_question3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <CheckBox
                    android:id="@+id/checkBox_question3_answer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3_check1" />

                <CheckBox
                    android:id="@+id/checkBox_question3_answer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3_check2" />

                <CheckBox
                    android:id="@+id/checkBox_question3_answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3_check3" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/header_question4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_question4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <EditText
                    android:id="@+id/question4_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/question4_name"
                    android:inputType="text" />

                <Button
                    android:id="@+id/quizSubmitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz_submit" />

            </LinearLayout>
        </ScrollView>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>